--- a/CajeroCrud/src/app/components/transaccion/transaccion.component.html
+++ b/CajeroCrud/src/app/components/transaccion/transaccion.component.html
@@ -51,7 +51,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 >Nuevo Deposito</h1>
+          <h1 >Deposito</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="newTransaccion()"></button>
         </div>
         <div class="modal-body">
@@ -83,7 +83,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 >Nuevo Retiro</h1>
+        <h1 >Retiro</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="newTransaccion()"></button>
       </div>
       <div class="modal-body">
@@ -116,7 +116,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 >Nuevo Deposito a Número Celular</h1>
+          <h1 >Deposito a Número Celular</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="newTransaccion()"></button>
         </div>
         <div class="modal-body">
@@ -155,7 +155,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 >Nuevo Deposito a Terceros</h1>
+          <h1 >Deposito a Terceros</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="newTransaccion()"></button>
         </div>
         <div class="modal-body">
